[package]
name = "shadownetwork2d"
version = "0.1.1"
edition = "2021"
authors = ["Jack @whispertoybox@gmail.com"]
description = "A comprehensive networking framework for Rust applications"
repository = "https://github.com/jack/shadownetwork2d"
keywords = ["networking", "async", "realtime", "multiplayer", "framework"]
categories = ["network-programming", "game-development", "web-programming"]
license-file = "LICENSE"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dashmap = "5.0"
crossbeam = "0.8"
tokio-tungstenite = { version = "0.20", optional = true }
flate2 = { version = "1.0", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
prometheus = { version = "0.13", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["tcp", "udp", "websocket"]
tcp = []
udp = []
websocket = ["tokio-tungstenite"]
compression = ["flate2"]
encryption = ["aes-gcm", "rand"]
metrics = ["prometheus"]

[[bench]]
name = "networking_benchmarks"
harness = false